# physmod-ml-course

./: .gitignore  README.md  project_ideas.md  pyproject.toml
week01/notebooks/: progressive_string.py
week01/slides/: index.qmd
week02/notebooks/: modal_identification.py
week02/slides/: index.html  index.qmd
week02/slides/animations/: basis_comparison.py  basis_expansion.py  cfl_blowup.py  membrane_modes_2d.py  separation_of_variables.py  stencil_slide.py  stiffness_toggle.py
week03/notebooks/: complex_modal_recursion.py  nonlinear_tension_modulation.py
week03/slides/: index.html  index.qmd
week04/notebooks/: differentiable_sinusoidal_synth.py
week04/slides/: index.qmd
week04/slides/animations/: complex_frequency_optimization_movie.py  sinusoid_optimization_movies.py
week05/notebooks/: forced_modal_training_data.py  learn_modal_nonlinearity.py
week05/slides/: index.qmd
week06/notebooks/: pinn_harmonic_oscillator.py
week06/slides/: index.qmd
week06/slides/images/: pinn_training.webm
week07/notebooks/: fno_wave_operator.py  fno_wave_operator_ar.py
week07/slides/: index.qmd
week08/notebooks/: conditional_flow_excitation_position.py
week08/slides/: index.qmd
week09/notebooks/: conditional_flow_excitation_position.py
week09/slides/: index.qmd
