[project]
name = "physmod-ml-course"
version = "0.1.0"
description = "Slides and notebooks for the Differentiable Physical Modelling and Machine Learning for Sound Synthesis course."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "jaxdiffmodal",
    "jupyter>=1.1.1",
    "pyyaml>=6.0.3",
]

[tool.uv.sources]
jaxdiffmodal = { git = "https://github.com/rodrigodzf/jaxdiffmodal", rev = "v0.1.0" }
